<resources>

    <string name="app_name">Nuticomponents</string>
    <string name="search_view_text">Search Nutiteq Maps</string>
    <string name="package_status_available">Available</string>
    <string name="pck_update">Update available</string>
    <string name="package_status_ready">Download complete</string>
    <string name="pck_update_title">Update or delete</string>
    <string name="pck_update_msg">Do you want to update or delete package?</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="package_remove">Package remove</string>
    <string name="package_remove_msg">Are you sure you want to delete permanently?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="package_status_waiting">Queued</string>
    <string name="package_status_copying">Copying</string>
    <string name="package_status_downloading">Downloading</string>
    <string name="package_status_removing">Removing</string>
    <string name="of">of</string>
    <string name="package_status_paused">Paused</string>
    <string name="pause_cancel">Pause or cancel</string>
    <string name="pause_cancel_msg">Do you want to pause or cancel this download?</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="no_space_msg">Sorry, but there isn\'t enough free space for this package</string>
    <string name="package_list_failed">Failed to download map package list</string>
    <string name="package_failed_download">Failed to download map package</string>
    <string name="notification_no_space_title">wasn\'t download</string>
    <string name="notification_no_space_desc">There wasn\'t enough free space</string>
    <string name="notification_msg">is ready for use</string>
    <string name="notification_msg2">Failed to download</string>
    <string name="notification_msg3">Download queue:</string>
    <string name="notification_msg4">items waiting</string>
    <string name="toast_no_space_msg">There isn\'t enough free space for</string>
    <string name="toast_no_space_msg2">package</string>
    <string name="download_activity">Download</string>
    <string name="external_storage_error2">External storage isn\'t available, package list can\'t be shown</string>
    <string name="tracks_battery">Battery is below 10%%, GPS tracking is stopped.</string>
    <string name="tracks_error">Something went wrong, GPS track can\'t be saved!</string>
    <string name="start_time">Start time:</string>
    <string name="duration">Duration:</string>
    <string name="length">Length:</string>
    <string name="no_track">No locations found for this track</string>
    <string name="start_location">Start location:</string>
    <string name="end_location">End location:</string>
    <string name="track">Track</string>
    <string name="track_delete_error">Something went wrong, track isn\'t deleted</string>
    <string name="gpx">Export as GPX</string>
    <string name="no_locations">Sorry, but there should be at least two GPS locations saved to show track</string>
    <string name="ok">OK</string>
    <string name="select_remove_mode">Remove modes</string>
    <string name="save_hint">Enter file name</string>
    <string name="no_file_name">Please first enter file name</string>
    <string name="no_folder">Please first pick up folder</string>
    <string name="no_external">Sorry, but it seems that external storage isn\'t avaiable!</string>
    <string name="layers_add">Add</string>
    <string name="layers_save">Save</string>
    <string name="layers_load">Load</string>
    <string name="layers_diaolog_msg">Do you want to save layers configuration?</string>
    <string name="layers_diaolog_title">Layers configuration changed</string>
    <string name="layer_exist">This layer is already added</string>
    <string name="error_layers">Error reading layers file!</string>
    <string name="layers_saving_error">Something went wrong, layers file isn\'t saved!</string>
    <string name="layers_file_saved">Configutation is saved</string>
    <string name="no_layers">Please first add some layers</string>
    <string name="layer_msg1">Select .mbtiles, .shp, .wms, .tif or .nmldb file for adding new layer</string>
    <string name="layer_msg2">Enter file name and select folder for saving layers configuration or pick up existing .layers file for rewriting</string>
    <string name="layer_msg3">Select .layers file for loading layers configuration</string>
    <string name="background_map">Background map</string>
    <string name="offline_maps">Nutiteq package</string>
    <string name="online_vector_maps">Online vector</string>
    <string name="online_raster_maps">Online raster</string>
    <string name="move">Moving files</string>
    <string name="tracks">GPS tracks</string>
    <string name="error_gps_disabled">Sorry, but it seems that GPS is currently disabled on this device. Please enable it from device settings.</string>
    <string name="gps_settings">Settings</string>
    <string name="nothing_changed">Configuration isn\'t chnged!</string>
    <string name="download">Download</string>
    <string name="layerGroup">group</string>
    <string name="sorry">Sorry, but you can\'t remove this layer, it\'s default layer.</string>
    <string name="search_progress">Searching for</string>
    <string name="json_error">jSON parsing error</string>
    <string name="second">s</string>
    <string name="minute">m</string>
    <string name="hour">h</string>
    <string name="json_11">This activity can be used only from API 11.</string>
    <string name="layer_add">Add layer</string>
    <string name="pck_cancel">Package cancel</string>
    <string name="pck_cancel_msg">Do you want to cancel package from queue?</string>
    <string name="speed">speed:</string>
    <string name="distance">distance:</string>
    <string name="tracking_off">tracking off:</string>
    <string name="tracking_on">tracking on:</string>
    <string name="nan">NaN</string>
    <string name="track_on">GPS tracking turned on</string>
    <string name="track_off">GPS tracking turned off</string>
    <string name="tracks_zero">You don\'t have gps tracks</string>
    <string name="settings">Settings</string>
    <string name="gps_tracks">GPS tracks</string>
    <string name="pck">pck</string>
    <string name="source">Source:</string>
    <string name="min_zoom">Min zoom:</string>
    <string name="max_zoom">Max zoom:</string>
    <string name="cache_settings">Persistent cache:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="offline_online_settings">OfflineOnlineTileDataSource:</string>
    <string name="style_settings">Style:</string>
    <string name="choose">choose map style</string>
    <string name="style_zip">Select .zip map style file</string>
    <string name="nutibright_v2">nutibright_v2</string>
    <string name="download_title">\u0020\u0020\u0020\u0020Download</string>
    <string name="downloaded_title">\u0020\u0020\u0020\u0020Downloads</string>
    <string name="downloaded">Downloads</string>
    <string name="package_routing_list_failed">Failed to download routing package list</string>
    <string name="package_routing_failed_download">Failed to download routing package</string>
    <string name="dropped_pin">Dropped pin</string>
    <string name="retrieving_location">Retrieving location &#8230;</string>
    <string name="location">Location</string>
    <string name="pck_up">Updating of</string>
    <string name="pck_dw">Downloading of</string>
    <string name="pck_dw2">started. See Downloads menu for progress or notification.</string>
    <string name="download_suggestion">For more detailed view please download</string>

    <string-array name="remove_mode_labels">
        <item>Click remove</item>
        <item>Fling remove</item>
    </string-array>
    <string-array name="drag_init_mode_labels">
        <item>On down</item>
        <item>On drag</item>
        <item>On long press</item>
    </string-array>
    <string-array name="enables_labels">
        <item>Enable drag</item>
        <item>Enable sort</item>
        <item>Enable remove</item>
    </string-array>

</resources>