<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal|left"
            android:paddingLeft="10dp"
            android:text="@string/source"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="nutiteq://nutiteq.osm" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal|left"
            android:paddingLeft="10dp"
            android:text="@string/offline_online_settings"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio_offline_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_offline_online_on"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:checked="true"
                android:text="@string/on" />

            <RadioButton
                android:id="@+id/radio_offline_online_off"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/off" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal|left"
            android:paddingLeft="10dp"
            android:text="@string/cache_settings"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radio_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_cache_on"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:checked="true"
                android:text="@string/on" />

            <RadioButton
                android:id="@+id/radio_cache_off"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/off" />
        </RadioGroup>

        <TextView
            android:id="@+id/style"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal|left"
            android:paddingLeft="10dp"
            android:text="@string/style_settings"
            android:textSize="18sp" />

        <Button
            android:id="@+id/choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose" />

    </LinearLayout>
</ScrollView>