<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridView
        android:id="@+id/filePickerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="100dip"
        android:fadingEdge="vertical"
        android:fadingEdgeLength="30dip"
        android:numColumns="auto_fit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/file_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/save_hint" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>